--- a/src/styles/Gallery.css
+++ b/src/styles/Gallery.css
@@ -1,13 +1,3 @@
-.gallery {
-    align-items: center;
-    /* justify-content: space-between; */
-    text-align: center;
-    /* display: flex; */
-    padding-top: 4rem;
-    padding-bottom: 4rem;
-}
-
-img {
-    padding: 0.6rem;
-    height: 25rem;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
